# BCQM_I

./: CITATION.cff  README.md  requirements.txt
bcqm_tools/: .gitignore  CITATION.cff  README.md  __init__.py  cli.py  galton.py  gkls.py  pyproject.toml  ramsey.py  requirements.txt  run_from_yaml.py  utils.py
bcqm_tools/configs/: galton.yml  gkls_basic.yml  ramsey_constant.yml
bcqm_tools/tests/: test_gkls.py  test_ramsey.py
double_slit/: README.md  bcqm_double_slit.py  bcqm_double_slit_collapse.py  bcqm_double_slit_min.py  bcqm_double_slit_sim.py  class.txt
toy_experiment/: BCQM_toy_README.txt  README.md  bcqm_outcome_counts.csv  bcqm_positions.csv  bcqm_toy_densities.csv  bcqm_toy_experiment.py
